--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MEAN API",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "start": "node index.js"
   },
   "author": "Joan Manuel Defelippe",
   "license": "ISC",
